# Aurora5-OS

./: .gitignore  Lib  README.md
os/etc/: hostname  passwd
src/: CMakeLists.txt  Makefile  aurora5  aurora5.c  install.sh  run  test  unistall.sh
src/commands/: .gitignore  FileTamLinh.c  build_all_script.sh  clear  clear.c  echo  echo.c  exit  exit.c  install_scripts_to_os.sh  ls  ls.c  remove_all_builded_files.sh  your_name  your_name.c
src/commands/basic_calculator/: basic_calculator.c
src/commands/cat/: cat.c
src/commands/cd/: cd.c
src/commands/clear/: clear.c
src/commands/echo/: echo.c
src/commands/exit/: exit.c  exit_v2.c
src/commands/ls/: ls.c  ls_v2.c
src/commands/mkdir/: mkdir.c
src/commands/rm/: rm.c
src/commands/rmdir/: rmdir.c
src/commands/shutdown/: shutdown.c
src/commands/su/: su.c
src/commands/touch/: touch.c
src/commands/useradd/: useradd.c
src/commands/userdel/: userdel.c
src/commands/writef/: writef.c
src/commands/your_name/: your_name.c
src/commands/zhuling/: zhuling.c
src/etc/: hostname  passwd
src/libs/: constants.h
src/libs/command/: Makefile  command_processer.c  command_processer.h  test.c
src/libs/os/: CMakeLists.txt  Makefile  first_setup.c  first_setup.h  shell.c  shell.h  test.c
src/libs/process/: process_manager.c  process_manager.h
src/libs/security/: CMakeLists.txt  security.c  security.h
src/libs/setup/: FirstSetup.c  FirstSetup.h  shell.c  shell.h
src/libs/user/: Makefile  test.c  user_test  users_manager.c  users_manager.h
src/libs/utils/: Common.c  Common.h  Constants.h  aucolors.c  aucolors.h  common.c  common.h
src/zhuling_repo/: zhuling_repo.zl
src/zhuling_repo/scripts/: basic_calculator  your_name
