# # include_directories(../)
# # link_directories(../)
# # add_subdirectory(../)

# add_subdirectory(../utils)

# add_library(aucolors SHARE ../utils/aucolors)
# # add_library(common ../utils/common.c)
# # add_library(users_manager ../utils/users_manager.c)
# # add_library(shell shell.h)


# # target_link_libraries (${PROJECT_NAME} common)
# # target_link_libraries (${PROJECT_NAME} users_manager)
# # target_link_libraries (${PROJECT_NAME} shell)
# # project(os)

# # link_directories (../)
# # add_library (${PROJECT_NAME} ${sources})

# target_link_libraries (aucolors)
# # target_link_libraries (${PROJECT_NAME} common)
# # target_link_libraries (${PROJECT_NAME} users_manager)
# # target_link_libraries (${PROJECT_NAME} shell)




